[package]
name = "crsl-lib"
version = "0.2.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
dcbor = "0.19.1"
cid = { version = "0.11.1", features = ["serde"] }
multihash = "0.19.3"
multibase = "0.9.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_cbor = "0.11.0"
clap = { version = "4.5.11", features = ["derive"] }
serde_json = "1.0.100"
ulid = { version = "1.2.0", features = ["serde"] }
rusty-leveldb = "3.0.2"
bincode = { version = "2.0.1", features = ["serde"] }
tempfile = "3.7.0"
serde_bytes = "0.11.17"
thiserror = "2.0.12"
sha2 = "0.10.6"

[[example]]
name = "content_versioning"
path = "examples/content_versioning.rs"
